# openz-rs

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  agyfix.md  build.rs  fix.md  fix_implementationplan.md  fix_tools.md  future_improvements1.md  futureupdates.md  localinstall.sh  localupdate.sh  mcps_fix.md  onpkg.json  run_tests_safely.sh  working_models.md
.sediment/: config
.superpowers/sdd/: progress.md
docs/: architecture.md  channels.md  codes.md  mcps.md  security.md  self_improvement.md  subagents.md  tools.md  zeroclaw_research.md
docs/superpowers/plans/: 2026-07-02-refactor-subagent-module.md  2026-07-04-diagnose-system.md  2026-07-04-manage-backups.md  2026-07-04-manage-config.md  2026-07-04-manage-sessions.md  2026-07-06-agent-loop-registry-hardening.md  2026-07-08-openz-worktree-quota.md  2026-07-15-openz-recommended-fixes.md  2026-07-16-openz-runtime-reliability-fixes.md  2026-07-16-openz-telegram-remote-session-picker.md  2026-07-17-openz-knowledge-workflow-memory.md  2026-07-17-openz-model-memory-hardening.md  2026-07-21-browser-monitoring-tool.md  2026-07-21-tool-metadata-refactor.md
docs/superpowers/specs/: 2026-07-04-diagnose-system-design.md  2026-07-04-manage-backups-design.md  2026-07-04-manage-config-design.md  2026-07-04-manage-sessions-design.md
nanobotdocs/: channels.md  memory.md  providers.md  skills.md
onpkg_docs/: INDEX.md  agent.md  content.md  design.md  email.md  image_generator.md  implementation.md  notes.md  prd.md  social_search.md  svg_animator.md  todo.md  tool_usage_guide.md  tools.md  video_generator.md  workflow.md
proto/: mcp.proto
skills/: agent_orchestration_instincts.md  openz_config_access_workaround.md  tool_usage_guide.md  vague_issue_clarification.md
src/: cli.rs  lib.rs  logs.rs  main.rs  model_registry.rs  session.rs  shutdown.rs
src/agent/: activity.rs  agent_loop.rs  context_compactor.rs  error.rs  mod.rs  security.rs  skills.rs  style.rs
src/agent/agent_loop/: build.rs  command.rs  compact.rs  loop_control.rs  mod.rs  restore.rs  run.rs  save.rs  security_approval.rs  streaming.rs  tool_execution.rs  transcript.rs
src/agent/style/: colors.rs  icons.rs  menu.rs  mod.rs  spinner.rs
src/channels/: cli.rs  discord.rs  email.rs  mod.rs  telegram.rs  websocket.rs  whatsapp.rs
src/channels/cli/: input.rs  mcp.rs  mod.rs  render.rs
src/cli/: agent.rs  args.rs  builder.rs  changelog.rs  channels.rs  configure.rs  doctor.rs  logs.rs  mod.rs  onboard.rs  sop.rs  streaming.rs  tools.rs
src/config/: loader.rs  mod.rs  schema.rs
src/cron/: mod.rs  scheduler.rs
src/providers/: anthropic.rs  circuit_breaker.rs  mock.rs  mod.rs  ollama_manager.rs  openai.rs  resolver.rs
src/sop/: engine.rs  mod.rs
src/subagents/: mod.rs
src/tools/: ast_grep.rs  browser_common.rs  browser_status.rs  cargo_manager.rs  clipboard.rs  compiler_auto_heal.rs  crawl.rs  cron.rs  db_inspector.rs  doc_reader.rs  docs_mcp.rs  filesystem.rs  firefox.rs  get_logs.rs  git_manager.rs  github.rs  github_mcp.rs  graph_memory.rs  grep.rs  gsd_browser.rs  headroom.rs  html_video.rs  image_generator.rs  js_format.rs  manage_whitelist.rs  mcp.rs  mcp_manager.rs  memory_extra.rs  mermaid.rs  mod.rs  network.rs  notes.rs  obscura.rs  onpkg.rs  open.rs  outline.rs  remote.rs  resource_policy.rs  rust_docs.rs  searchxyz.rs  (+16 more)
src/tools/graph_memory/: branch.rs  db.rs  graph.rs  mod.rs  tests.rs
src/tools/headroom/: cache.rs  compress.rs  mod.rs  policy.rs  scoping.rs  stats.rs  (+1 more)
tests/: agent_loop.rs
tools/opendoc/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  localinstall.sh  localupdate.sh  rust-toolchain.toml  todo.md
tools/opendoc/.github/workflows/: ci.yml
tools/opendoc/benches/: benchmarks.rs
tools/opendoc/docs/: architecture.md  changelog.md  implementationplan.md  prd.md  spec.md  wasm.md
tools/opendoc/docs/superpowers/plans/: 2026-06-30-mcp-refactor-consolidation.md
tools/opendoc/src/: cli.rs  lib.rs  main.rs  security.rs  server.rs
tools/opendoc/src/batch/: archive.rs  mod.rs
tools/opendoc/src/converters/: mod.rs  render.rs  transmutation.rs
tools/opendoc/src/engine/: chunk.rs  complexity.rs  diff.rs  extract.rs  mod.rs  replace.rs  search.rs  template.rs
tools/opendoc/src/handlers/: csv.rs  docx.rs  html.rs  md.rs  mod.rs  pdf.rs  pdf_forms.rs  pptx.rs  xlsx.rs
tools/opendoc/src/ir/: document.rs  elements.rs  metadata.rs  mod.rs
tools/opendoc/src/ocr/: mod.rs
tools/opendoc/src/validators/: mod.rs  pdf_a.rs
tools/opendoc/tests/: integration.rs
tools/opendoc/tests/common/: mod.rs
tools/openmedia/animate/: Cargo.toml
tools/openmedia/animate/src/: lib.rs
tools/openmedia/core/: Cargo.toml
tools/openmedia/core/src/: config.rs  error.rs  hardware.rs  lib.rs  models.rs  progress.rs  types.rs
tools/openmedia/image/: Cargo.toml
tools/openmedia/image/src/: lib.rs
tools/openmedia/improve/: Cargo.toml
tools/openmedia/improve/sql/: schema.sql
tools/openmedia/improve/src/: history.rs  lib.rs  refiner.rs  scorer.rs  tokenizer.rs
tools/openmedia/mcp/: Cargo.toml
tools/openmedia/mcp/examples/: generate_extras.rs  generate_promo.rs  generate_samples.rs  mcp_video_example.rs  render_promo.rs  render_sample.rs
tools/openmedia/mcp/src/: lib.rs  main.rs
tools/openmedia/mcp/tests/: mcp_image_tests.rs  mcp_improve_tests.rs  mcp_video_tests.rs
tools/openmedia/process/: Cargo.toml
tools/openmedia/process/src/: cpu.rs  gpu.rs  io.rs  lib.rs  transforms.rs
tools/openmedia/process/src/shaders/: invert.wgsl
tools/openmedia/process/tests/: batch_tests.rs  cpu_tests.rs  gpu_tests.rs  transform_tests.rs
tools/openmedia/svg/: Cargo.toml
tools/openmedia/svg/src/: chart.rs  icons.rs  lib.rs  schema.rs
tools/openmedia/svg/tests/: chart_tests.rs  icon_tests.rs  svg_tests.rs
tools/openmedia/video/: Cargo.toml
tools/openmedia/video/examples/: test_chrome.rs
tools/openmedia/video/src/: lib.rs
tools/openz-docs/: Cargo.toml
tools/openz-docs/src/: lib.rs
tools/openz-github/: Cargo.toml
tools/openz-github/src/: lib.rs
tools/searchxyz/: Cargo.toml
(+48 files in other folders)
