[package]
name = "openz"
version = "0.0.9"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
inquire = "0.7"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
async-trait = "0.1"
dotenvy = "0.15"
base64 = "0.22.1"
arboard = "3.6.1"
image = "0.25.10"
imageproc = "0.25.0"
tiny-skia = "0.11.4"
plotters = "0.3.5"
simple-mermaid = "0.2.0"
crossterm = "0.29.0"
open = "5.2"
scraper = "0.19"
ego-tree = "0.6"
notify = "6.1.1"
percent-encoding = "2.3"
cron = "0.12"
tonic = "0.11"
prost = "0.12"
calamine = "0.35.0"
pdf-extract = "0.10.0"
docx-rs = "0.4.20"
wasmtime = "45.0.1"
fastembed = { version = "5.16.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls", "image-models"] }
wasmtime-wasi = "45.0.1"
diffy = "0.5.0"
html2md = "0.2.15"

[build-dependencies]
tonic-build = "0.11"
