[package]
name = "openz"
version = "0.0.30"
edition = "2021"

[workspace]
members = [
    ".",
    "tools/searchxyz"
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
inquire = "0.7"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
rand = "0.8"
async-trait = "0.1"
dotenvy = "0.15"
base64 = "0.22.1"
hmac = "0.12"
hex = "0.4"
arboard = "3.6.1"
image = "0.25.10"
imageproc = "0.25.0"
tiny-skia = "0.11.4"
plotters = "0.3.5"
simple-mermaid = "0.2.0"
crossterm = "0.29.0"
open = "5.2"
scraper = "0.19"
ego-tree = "0.6"
notify = "6.1.1"
percent-encoding = "2.3"
cron = "0.12"
tonic = "0.11"
prost = "0.12"
calamine = "0.35.0"
pdf-extract = "0.10.0"
docx-rs = "0.4.20"
spider = { version = "2.21.0", default-features = false, features = ["regex"] }
wasmtime = "45.0.1"
fastembed = { version = "5.16.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls", "image-models"] }
wasmtime-wasi = "45.0.1"
diffy = "0.5.0"
html2md = "0.2.15"
ab_glyph = "0.2"
thirtyfour = "0.37.1"
imap = { version = "3.0.0-alpha.12", default-features = false, features = ["rustls-tls"] }
lettre = { version = "0.11.7", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mailparse = "0.15.0"
sha2 = "0.10"
fs2 = "0.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
oxc_parser = "0.30.0"
oxc_allocator = "0.30.0"
oxc_codegen = "0.30.0"
oxc_span = "0.30.0"
oxc_ast = "0.30.0"
oxc_syntax = "0.30.0"
libc = "0.2"
mermaid-rs-renderer = "0.2.2"
wavyte = "0.2.1"
tantivy = "0.22"
governor = "0.8"
lru = "0.12"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1.2"
searchxyz = { path = "tools/searchxyz" }


[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3           # Maximize runtime optimizations
codegen-units = 1       # Reduces compiler RAM usage and yields better optimizations
lto = "thin"            # Link-Time Optimization: reduces peak linker memory usage and final ROM size
debug = false           # Exclude debug symbols to minimize compile RAM usage
strip = true            # Strip symbols and debug info from the final binary (significantly reduces ROM footprint)
