[package]
name = "openz-docs-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
html2md = "0.2"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.19"
percent-encoding = "2.3"