[package]
name = "openz-github-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
octocrab = "0.38"