[package]
name = "openmedia-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4" }
toml = { version = "0.8" }
directories = { version = "5.0" }
sha2 = { version = "0.10" }
base64 = { version = "0.22" }
wgpu = { version = "23.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
