[package]
name = "openmedia-process"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openmedia-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
rayon = { version = "1.10" }

wgpu = { version = "23.0" }
bytemuck = { version = "1.19" }
imageproc = { version = "0.25" }
glob = "0.3"
pollster = "0.3"

[dev-dependencies]
tempfile = "3.10"
